# ladybug-rs

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  HANDOVER.md  PHASE1_REMEDIATION.md  README.md  docker-compose.yml  railway.json  railway.toml
archived/deployment/: Dockerfile.old  docker-compose.old.yml  server_refactored.rs
archived/python_sdk/: mod_with_hybrid.rs
benches/: cam_ops.rs  fingerprint.rs  hamming.rs
docs/: CRYSTAL_THERMODYNAMIC_REALITY.md  GRAMMAR_VS_CRYSTAL.md  IMPLEMENTATION_TODO.md  NSM_REPLACES_JINA.md  README.md  SCENT_INDEX.md  UNIFIED_GRAMMAR_INTEGRATION.md  UNIVERSAL_ARCHITECTURE.md  _take-out.md  milestone.md  quantum_native_paper.docx
docs/api/: FLIGHT_ENDPOINTS.md  MCP_ACTIONS.md  REDIS_COMMANDS.md  SCIENTIFIC.md
docs/architecture/: ADDRESS_MODEL.md  MEMORY_ZONES.md  OVERVIEW.md
docs/guides/: GETTING_STARTED.md
docs/modules/: FLIGHT.md  SEARCH.md  STORAGE.md
docs/wiring/: CLAUDE_CODE_PROMPT.md  FOUR_WIRES.md  INFERENCE_CONTEXT.md  STYLE_ENCODING.md
examples/: cam_query.rs  cognitive_graph.rs
mcp/: README.md  fastapi_server.py  server.py  server.ts
sdk/python/: README.md  ladybug_client.py  ladybugdb.py  requirements.txt  setup.py
src/: lib.rs
src/bench/: comparison.rs  memory.rs  mod.rs  recall.rs  throughput.rs
src/cognitive/: collapse_gate.rs  grammar_engine.rs  membrane.rs  mod.rs  quad_triangle.rs  rung.rs  seven_layer.rs  substrate.rs  thought.rs  unified_stack.rs
src/core/: buffer.rs  fingerprint.rs  index.rs  mod.rs  scent.rs  simd.rs  vsa.rs
src/extensions/: cognitive_codebook.rs  context_crystal.rs  crystal_lm.rs  meta_resonance.rs  mod.rs  nsm_substrate.rs
src/extensions/codebook/: hierarchical.rs
src/extensions/compress/: compress.rs
src/extensions/hologram/: bitchain_5d.rs  bitchain_7d.rs  mod.rs  quantum_11d.rs  quantum_13d.rs  quantum_17d.rs  quantum_5d.rs  quantum_7d.rs  quantum_algorithms.rs  quantum_crystal.rs  quantum_field.rs
src/extensions/spo/: jina_cache.rs  spo.rs
src/fabric/: butterfly.rs  executor.rs  firefly_frame.rs  gel.rs  mod.rs  subsystem.rs  udp_transport.rs  zero_copy.rs
src/flight/: actions.rs  mod.rs  server.rs
src/grammar/: triangle.rs  unified_parser.rs
src/graph/: avx_engine.rs  cognitive.rs  mod.rs  traversal.rs
src/learning/: blackboard.rs  cam_ops.rs  causal_ops.rs  cognitive_frameworks.rs  cognitive_styles.rs  mod.rs  rl_ops.rs
src/nars/: context.rs  evidence.rs  mod.rs
src/query/: builder.rs  cognitive_udfs.rs  cypher.rs  datafusion.rs  fingerprint_table.rs  hybrid.rs  mod.rs  scent_scan.rs
src/search/: causal.rs  hdr_cascade.rs  mod.rs  scientific.rs
src/storage/: bind_space.rs  cog_redis.rs  concurrency.rs  database.rs  hardening.rs  mod.rs  redis_adapter.rs  resilient.rs  service.rs  substrate.rs  temporal.rs
src/storage/lance_zero_copy/: mod.rs
src/world/: state.rs
