[package]
name = "ladybug"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
description = "Crystal Lake: Unified Cognitive Database with 4096 CAM Operations, Quantum-Inspired Operators, and 144 Verb Graph Substrate"
repository = "https://github.com/AdaWorldAPI/ladybug-rs"
keywords = ["database", "graph", "vector", "reasoning", "agi", "lance", "cognitive", "quantum"]
categories = ["database", "science", "algorithms", "simulation"]
readme = "README.md"
authors = ["Jan Hübener", "Ada Consciousness Project"]

[lib]
name = "ladybug"
crate-type = ["cdylib", "rlib"]

# =============================================================================
# FEATURES
# =============================================================================

[features]
default = ["simd", "parallel"]

# Core features
simd = []                        # AVX-512 SIMD for Hamming operations
parallel = ["rayon"]             # Parallel processing

# Storage backends
lancedb = ["lance"]              # LanceDB vector storage
lance-zero-copy = []             # Zero-copy integration (uses Arrow buffers)
neo4j = ["neo4rs"]               # Neo4j graph database
redis = ["dep:redis"]            # Redis caching

# Extensions
python = ["pyo3"]                # Python bindings
codebook = []                    # Cognitive codebook (NSM, NARS, etc.)
hologram = []                    # Holographic reduced representations
spo = ["reqwest"]                # Subject-Predicate-Object triples
compress = ["lz4"]               # Compression support
quantum = []                     # Quantum-inspired operators
bench = []                       # Benchmark suite (comparison vs Qdrant/Milvus)

# All features
full = [
    "simd", "parallel", "python", 
    "codebook", "hologram", "spo", "compress", "quantum",
    "lancedb", "neo4j", "redis"
]

# =============================================================================
# CORE DEPENDENCIES
# =============================================================================

[dependencies]
# -----------------------------------------------------------------------------
# Storage: LanceDB + Arrow ecosystem
# -----------------------------------------------------------------------------
lance = { version = "0.9", optional = true }
# Arrow ecosystem for zero-copy buffer access
arrow = { version = "53", features = ["ffi"] }
arrow-array = "53"
arrow-schema = "53"
arrow-buffer = "53"
arrow-data = "53"
arrow-cast = "53"
arrow-select = "53"
parquet = { version = "53", features = ["snap", "lz4", "zstd"] }
# Bytes crate for zero-copy buffer sharing (same as lance-io uses)
bytes = "1.4"

# -----------------------------------------------------------------------------
# Query: DataFusion SQL engine
# -----------------------------------------------------------------------------
datafusion = "43"
sqlparser = "0.52"

# -----------------------------------------------------------------------------
# Graph: Neo4j driver
# -----------------------------------------------------------------------------
neo4rs = { version = "0.7", optional = true }

# -----------------------------------------------------------------------------
# Cache: Redis
# -----------------------------------------------------------------------------
redis = { version = "0.24", features = ["tokio-comp", "json"], optional = true }

# -----------------------------------------------------------------------------
# Async runtime
# -----------------------------------------------------------------------------
tokio = { version = "1.35", features = ["full", "tracing"] }
futures = "0.3"
async-trait = "0.1"

# -----------------------------------------------------------------------------
# Parallelism
# -----------------------------------------------------------------------------
rayon = { version = "1.8", optional = true }
parking_lot = "0.12"
crossbeam = "0.8"
dashmap = "5.5"

# -----------------------------------------------------------------------------
# Serialization
# -----------------------------------------------------------------------------
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"
rmp-serde = "1.1"

# -----------------------------------------------------------------------------
# Utilities
# -----------------------------------------------------------------------------
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
hashbrown = { version = "0.14", features = ["serde"] }
smallvec = { version = "1.11", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.21"
rand = "0.8"
num-traits = "0.2"
num_cpus = "1.16"
itertools = "0.12"
once_cell = "1.19"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# -----------------------------------------------------------------------------
# Compression
# -----------------------------------------------------------------------------
lz4 = { version = "1.24", optional = true }

# -----------------------------------------------------------------------------
# HTTP client (for SPO/external APIs)
# -----------------------------------------------------------------------------
reqwest = { version = "0.11", features = ["json", "rustls-tls"], optional = true }

# -----------------------------------------------------------------------------
# Python bindings
# -----------------------------------------------------------------------------
pyo3 = { version = "0.20", optional = true, features = ["extension-module"] }

# =============================================================================
# DEV DEPENDENCIES
# =============================================================================

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.9"
tokio-test = "0.4"
proptest = "1.4"
pretty_assertions = "1.4"

# =============================================================================
# BENCHMARKS
# =============================================================================

[[bench]]
name = "hamming"
harness = false

[[bench]]
name = "fingerprint"
harness = false

[[bench]]
name = "cam_ops"
harness = false

# =============================================================================
# EXAMPLES
# =============================================================================

[[example]]
name = "basic_fingerprint"
path = "examples/basic_fingerprint.rs"

[[example]]
name = "cognitive_graph"
path = "examples/cognitive_graph.rs"

[[example]]
name = "quantum_ops"
path = "examples/quantum_ops.rs"

[[example]]
name = "cam_query"
path = "examples/cam_query.rs"

# =============================================================================
# BINARIES
# =============================================================================

[[bin]]
name = "ladybug-server"
path = "src/bin/server.rs"

[[bin]]
name = "ladybug-bench"
path = "src/bin/bench.rs"
required-features = ["bench"]

# =============================================================================
# PROFILE: Release optimizations
# =============================================================================

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.bench]
lto = "thin"
opt-level = 3
