[package]
name = "ladybug"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Crystal Lake: Unified Cognitive Database with 4096 CAM Operations, Quantum-Inspired Operators, and 144 Verb Graph Substrate"
repository = "https://github.com/AdaWorldAPI/ladybug-rs"
keywords = ["database", "graph", "vector", "reasoning", "agi", "lance", "cognitive", "quantum"]
categories = ["database", "science", "algorithms", "simulation"]
readme = "README.md"
authors = ["Jan Hübener", "Ada Consciousness Project"]

[lib]
name = "ladybug"
crate-type = ["cdylib", "rlib"]

# =============================================================================
# FEATURES
# =============================================================================

[features]
default = ["simd", "parallel"]

# Core features
simd = []                        # AVX-512 SIMD for Hamming operations
parallel = ["rayon"]             # Parallel processing

# Storage backends
lancedb = ["lance"]              # LanceDB vector storage
lance-zero-copy = []             # Zero-copy integration (uses Arrow buffers)
neo4j = ["neo4rs"]               # Neo4j graph database
redis = ["dep:redis"]            # Redis caching

# Extensions
python = ["pyo3"]                # Python bindings
codebook = []                    # Cognitive codebook (NSM, NARS, etc.)
hologram = []                    # Holographic reduced representations
spo = ["reqwest"]                # Subject-Predicate-Object triples
compress = ["lz4"]               # Compression support
quantum = []                     # Quantum-inspired operators
bench = []                       # Benchmark suite (comparison vs Qdrant/Milvus)

# All features
full = [
    "simd", "parallel", "python", 
    "codebook", "hologram", "spo", "compress", "quantum",
    "lancedb", "neo4j", "redis"
]

# =============================================================================
# CORE DEPENDENCIES
# =============================================================================

[dependencies]
# -----------------------------------------------------------------------------
# Storage: LanceDB + Arrow ecosystem
# Arrow 56.x aligns with lance 1.0
# -----------------------------------------------------------------------------
lance = { version = "1.0", optional = true }
arrow = { version = "56", features = ["ffi"] }
arrow-array = "56"
arrow-schema = "56"
arrow-buffer = "56"
arrow-data = "56"
arrow-cast = "56"
arrow-select = "56"
parquet = { version = "56", features = ["snap", "lz4", "zstd"] }
bytes = "1.11"

# -----------------------------------------------------------------------------
# Query: DataFusion SQL engine
# DataFusion 50.x aligns with arrow 56 / lance 1.0
# -----------------------------------------------------------------------------
datafusion = "50"
sqlparser = "0.58"

# -----------------------------------------------------------------------------
# Graph: Neo4j driver
# -----------------------------------------------------------------------------
neo4rs = { version = "0.8", optional = true }

# -----------------------------------------------------------------------------
# Cache: Redis
# redis 1.0 — major rewrite, tokio-comp → tokio-rustls-comp
# -----------------------------------------------------------------------------
redis = { version = "1.0", features = ["tokio-rustls-comp", "json"], optional = true }

# -----------------------------------------------------------------------------
# Async runtime
# -----------------------------------------------------------------------------
tokio = { version = "1.49", features = ["full", "tracing"] }
futures = "0.3"
async-trait = "0.1"

# -----------------------------------------------------------------------------
# Parallelism
# -----------------------------------------------------------------------------
rayon = { version = "1.11", optional = true }
parking_lot = "0.12"
crossbeam = "0.8"
dashmap = "6.1"

# -----------------------------------------------------------------------------
# Serialization
# -----------------------------------------------------------------------------
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
bincode = "1.3"
rmp-serde = "1.3"

# -----------------------------------------------------------------------------
# Utilities
# -----------------------------------------------------------------------------
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.20", features = ["v4", "serde"] }
hashbrown = { version = "0.15", features = ["serde"] }
smallvec = { version = "1.15", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"
num-traits = "0.2"
num_cpus = "1.17"
itertools = "0.13"
once_cell = "1.21"
lazy_static = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"

# -----------------------------------------------------------------------------
# Compression
# -----------------------------------------------------------------------------
lz4 = { version = "1.28", optional = true }

# -----------------------------------------------------------------------------
# HTTP client (for SPO/external APIs)
# reqwest 0.12 — hyper 1.0 based, rustls default
# -----------------------------------------------------------------------------
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }

# -----------------------------------------------------------------------------
# Python bindings
# pyo3 0.23 — latest stable with edition 2021+ support
# (0.28 requires edition 2024 build tooling changes)
# -----------------------------------------------------------------------------
pyo3 = { version = "0.23", optional = true, features = ["extension-module"] }

# =============================================================================
# DEV DEPENDENCIES
# =============================================================================

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.15"
tokio-test = "0.4"
proptest = "1.6"
pretty_assertions = "1.4"

# =============================================================================
# BENCHMARKS
# =============================================================================

[[bench]]
name = "hamming"
harness = false

[[bench]]
name = "fingerprint"
harness = false

[[bench]]
name = "cam_ops"
harness = false

# =============================================================================
# EXAMPLES
# =============================================================================

[[example]]
name = "basic_fingerprint"
path = "examples/basic_fingerprint.rs"

[[example]]
name = "cognitive_graph"
path = "examples/cognitive_graph.rs"

[[example]]
name = "quantum_ops"
path = "examples/quantum_ops.rs"

[[example]]
name = "cam_query"
path = "examples/cam_query.rs"

# =============================================================================
# BINARIES
# =============================================================================

[[bin]]
name = "ladybug-server"
path = "src/bin/server.rs"

[[bin]]
name = "ladybug-bench"
path = "src/bin/bench.rs"
required-features = ["bench"]

# =============================================================================
# PROFILE: Release optimizations
# =============================================================================

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.bench]
lto = "thin"
opt-level = 3
